cc_binary(
    name = "DVB-Analizator",
    srcs = ["main.cpp"],
    deps = [
        "//src/Application:Application",
        # "//third_party/qt:qt",
    ],
    cxxopts = [
        "-Wall",
        "-Wextra",
        "-std=c++17",
        "-g",
        "-I/usr/include/x86_64-linux-gnu/qt5",
        "-DQT_WIDGETS_LIB",
        "-DQT_GUI_LIB",
        "-DQT_CORE_LIB",
        "-I/usr/include/x86_64-linux-gnu/qt5/QtWidgets",
        "-I/usr/include/x86_64-linux-gnu/qt5",
        "-I/usr/include/x86_64-linux-gnu/qt5/QtGui",
        "-I/usr/include/x86_64-linux-gnu/qt5",
        "-I/usr/include/x86_64-linux-gnu/qt5/QtCore",
        "-I/usr/include/x86_64-linux-gnu/qt5",
    ],
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lX11",
        "-lz",
        "-lQt5Widgets",
        "-lQt5Gui",
        "-lQt5Core",
    ],
    # linkopts = [
    #     "-lQt5Core",
    #     "-lQt5Gui",
    #     "-lQt5Widgets",
    #     "-lpcre2-16",
    #     "-lglib-2.0",
    # ]
)