cc_library(
    name = "Application",
    srcs = [
        "Application.cpp",
        "Analizator.cpp",
    ],
    hdrs = [
        "Application.h",
        "Analizator.h"
    ],
    deps = [
        "//src/Application/Parsers:Parsers",
        "//src/Application/Utilities:Utilities",
        "//src/Application/Parsers/DataTypes:DataTypes",
        # "//third_party/qt:qt",
    ],
    cxxopts = [
        "-I/usr/include/x86_64-linux-gnu/qt5",
        "-DQT_WIDGETS_LIB",
        "-DQT_GUI_LIB",
        "-DQT_CORE_LIB",
        "-I/usr/include/x86_64-linux-gnu/qt5/QtWidgets",
        "-I/usr/include/x86_64-linux-gnu/qt5",
        "-I/usr/include/x86_64-linux-gnu/qt5/QtGui",
        "-I/usr/include/x86_64-linux-gnu/qt5",
        "-I/usr/include/x86_64-linux-gnu/qt5/QtCore",
        "-I/usr/include/x86_64-linux-gnu/qt5",
    ],
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lX11",
        "-lz",
        "-lQt5Widgets",
        "-lQt5Gui",
        "-lQt5Core",
    ],
    includes = ["."],
    visibility = ["//src:__pkg__"]
)